germanLexer/target/generated-sources/antlr4/assignmentLexPar/foplGramParser.java
// Generated from foplGram.g4 by ANTLR 4.4

package assignmentLexPar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class foplGramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__26=1, T__25=2, T__24=3, T__23=4, T__22=5, T__21=6, T__20=7, T__19=8, 
		T__18=9, T__17=10, T__16=11, T__15=12, T__14=13, T__13=14, T__12=15, T__11=16, 
		T__10=17, T__9=18, T__8=19, T__7=20, T__6=21, T__5=22, T__4=23, T__3=24, 
		T__2=25, T__1=26, T__0=27, POINT=28, COMMA=29, TERM=30, SYMBOL=31, COMPARATOR=32, 
		OPERATOR=33, TYPE=34, LETTER=35, WORD=36, BOOLVAL=37, NUMBER=38, BLOCKOPEN=39, 
		BLOCKCLOSE=40, WS=41;
	public static final String[] tokenNames = {
		"<INVALID>", "'def :'", "'return'", "'::global'", "'='", "'elseif ('", 
		"'do'", "'out('", "'('", "'route('", "'->'", "'case'", "'in('", "'while ('", 
		"'if ('", "':'", "'['", "'drop'", "']'", "'or'", "'#'", "'else'", "'for (float'", 
		"')'", "'and'", "'+'", "'array'", "'] = '", "'.'", "','", "';'", "SYMBOL", 
		"COMPARATOR", "OPERATOR", "TYPE", "LETTER", "WORD", "BOOLVAL", "NUMBER", 
		"'{'", "'}'", "WS"
	};
	public static final int
		RULE_prog = 0, RULE_string = 1, RULE_value = 2, RULE_operation = 3, RULE_rtn = 4, 
		RULE_globals = 5, RULE_funcDeclare = 6, RULE_funcCall = 7, RULE_varDec = 8, 
		RULE_assignment = 9, RULE_comparison = 10, RULE_output = 11, RULE_input = 12, 
		RULE_doWhile = 13, RULE_routeCaseroute = 14, RULE_rCase = 15, RULE_def = 16, 
		RULE_whileLoop = 17, RULE_forLoop = 18, RULE_ifState = 19, RULE_elseif = 20, 
		RULE_elseState = 21, RULE_arrayDec = 22, RULE_arrayAssign = 23, RULE_arrayMid = 24, 
		RULE_statement = 25;
	public static final String[] ruleNames = {
		"prog", "string", "value", "operation", "rtn", "globals", "funcDeclare", 
		"funcCall", "varDec", "assignment", "comparison", "output", "input", "doWhile", 
		"routeCaseroute", "rCase", "def", "whileLoop", "forLoop", "ifState", "elseif", 
		"elseState", "arrayDec", "arrayAssign", "arrayMid", "statement"
	};

	@Override
	public String getGrammarFileName() { return "foplGram.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public foplGramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public FuncDeclareContext funcDeclare(int i) {
			return getRuleContext(FuncDeclareContext.class,i);
		}
		public GlobalsContext globals(int i) {
			return getRuleContext(GlobalsContext.class,i);
		}
		public List<GlobalsContext> globals() {
			return getRuleContexts(GlobalsContext.class);
		}
		public List<FuncDeclareContext> funcDeclare() {
			return getRuleContexts(FuncDeclareContext.class);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(52); globals();
					}
					} 
				}
				setState(57);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(59); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58); funcDeclare();
				}
				}
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TYPE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode SYMBOL(int i) {
			return getToken(foplGramParser.SYMBOL, i);
		}
		public TerminalNode NUMBER(int i) {
			return getToken(foplGramParser.NUMBER, i);
		}
		public TerminalNode WS(int i) {
			return getToken(foplGramParser.WS, i);
		}
		public List<TerminalNode> WORD() { return getTokens(foplGramParser.WORD); }
		public List<TerminalNode> WS() { return getTokens(foplGramParser.WS); }
		public List<TerminalNode> NUMBER() { return getTokens(foplGramParser.NUMBER); }
		public TerminalNode WORD(int i) {
			return getToken(foplGramParser.WORD, i);
		}
		public List<TerminalNode> SYMBOL() { return getTokens(foplGramParser.SYMBOL); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); match(T__7);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SYMBOL) | (1L << WORD) | (1L << NUMBER) | (1L << WS))) != 0)) {
				{
				{
				setState(64);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SYMBOL) | (1L << WORD) | (1L << NUMBER) | (1L << WS))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70); match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode BOOLVAL() { return getToken(foplGramParser.BOOLVAL, 0); }
		public TerminalNode WORD() { return getToken(foplGramParser.WORD, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(foplGramParser.NUMBER, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_value);
		try {
			setState(76);
			switch (_input.LA(1)) {
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(72); match(NUMBER);
				}
				break;
			case BOOLVAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(73); match(BOOLVAL);
				}
				break;
			case WORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(74); match(WORD);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 4);
				{
				setState(75); string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public TerminalNode NUMBER(int i) {
			return getToken(foplGramParser.NUMBER, i);
		}
		public List<TerminalNode> WORD() { return getTokens(foplGramParser.WORD); }
		public List<TerminalNode> NUMBER() { return getTokens(foplGramParser.NUMBER); }
		public TerminalNode WORD(int i) {
			return getToken(foplGramParser.WORD, i);
		}
		public TerminalNode OPERATOR() { return getToken(foplGramParser.OPERATOR, 0); }
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitOperation(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_la = _input.LA(1);
			if ( !(_la==WORD || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(79); match(OPERATOR);
			setState(80);
			_la = _input.LA(1);
			if ( !(_la==WORD || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RtnContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode TERM() { return getToken(foplGramParser.TERM, 0); }
		public RtnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rtn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterRtn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitRtn(this);
		}
	}

	public final RtnContext rtn() throws RecognitionException {
		RtnContext _localctx = new RtnContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rtn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); match(T__25);
			setState(83); value();
			setState(84); match(TERM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalsContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode TERM() { return getToken(foplGramParser.TERM, 0); }
		public TerminalNode WORD() { return getToken(foplGramParser.WORD, 0); }
		public TerminalNode TYPE() { return getToken(foplGramParser.TYPE, 0); }
		public GlobalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterGlobals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitGlobals(this);
		}
	}

	public final GlobalsContext globals() throws RecognitionException {
		GlobalsContext _localctx = new GlobalsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_globals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); match(TYPE);
			setState(87); match(WORD);
			setState(90);
			_la = _input.LA(1);
			if (_la==T__23) {
				{
				setState(88); match(T__23);
				setState(89); value();
				}
			}

			setState(92); match(T__24);
			setState(93); match(TERM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDeclareContext extends ParserRuleContext {
		public TerminalNode BLOCKOPEN() { return getToken(foplGramParser.BLOCKOPEN, 0); }
		public TerminalNode BLOCKCLOSE() { return getToken(foplGramParser.BLOCKCLOSE, 0); }
		public List<TerminalNode> WORD() { return getTokens(foplGramParser.WORD); }
		public List<TerminalNode> TYPE() { return getTokens(foplGramParser.TYPE); }
		public List<TerminalNode> COMMA() { return getTokens(foplGramParser.COMMA); }
		public TerminalNode TYPE(int i) {
			return getToken(foplGramParser.TYPE, i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode WORD(int i) {
			return getToken(foplGramParser.WORD, i);
		}
		public RtnContext rtn() {
			return getRuleContext(RtnContext.class,0);
		}
		public TerminalNode COMMA(int i) {
			return getToken(foplGramParser.COMMA, i);
		}
		public FuncDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDeclare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterFuncDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitFuncDeclare(this);
		}
	}

	public final FuncDeclareContext funcDeclare() throws RecognitionException {
		FuncDeclareContext _localctx = new FuncDeclareContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcDeclare);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(95); match(TYPE);
			setState(96); match(WORD);
			setState(97); match(T__19);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(98); match(TYPE);
				setState(99); match(WORD);
				setState(101);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(100); match(COMMA);
					}
				}

				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108); match(T__4);
			setState(109); match(BLOCKOPEN);
			setState(111); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(110); statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(113); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(115); rtn();
			setState(116); match(BLOCKCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncCallContext extends ParserRuleContext {
		public TerminalNode TERM() { return getToken(foplGramParser.TERM, 0); }
		public List<TerminalNode> WORD() { return getTokens(foplGramParser.WORD); }
		public List<TerminalNode> COMMA() { return getTokens(foplGramParser.COMMA); }
		public TerminalNode WORD(int i) {
			return getToken(foplGramParser.WORD, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(foplGramParser.COMMA, i);
		}
		public FuncCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterFuncCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitFuncCall(this);
		}
	}

	public final FuncCallContext funcCall() throws RecognitionException {
		FuncCallContext _localctx = new FuncCallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); match(WORD);
			setState(119); match(T__19);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WORD) {
				{
				{
				setState(120); match(WORD);
				setState(122);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(121); match(COMMA);
					}
				}

				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129); match(T__4);
			setState(130); match(TERM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecContext extends ParserRuleContext {
		public TerminalNode TERM() { return getToken(foplGramParser.TERM, 0); }
		public List<TerminalNode> WORD() { return getTokens(foplGramParser.WORD); }
		public TerminalNode TYPE() { return getToken(foplGramParser.TYPE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(foplGramParser.COMMA); }
		public TerminalNode WORD(int i) {
			return getToken(foplGramParser.WORD, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(foplGramParser.COMMA, i);
		}
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterVarDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitVarDec(this);
		}
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_varDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); match(TYPE);
			setState(133); match(WORD);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(134); match(COMMA);
				setState(135); match(WORD);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141); match(TERM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode TERM() { return getToken(foplGramParser.TERM, 0); }
		public List<TerminalNode> WORD() { return getTokens(foplGramParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(foplGramParser.WORD, i);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignment);
		try {
			setState(154);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143); match(WORD);
				setState(144); match(T__23);
				setState(145); value();
				setState(146); match(TERM);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(148); match(WORD);
				setState(149); match(T__23);
				setState(150); match(WORD);
				setState(151); match(T__2);
				setState(152); match(WORD);
				setState(153); match(TERM);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public TerminalNode COMPARATOR() { return getToken(foplGramParser.COMPARATOR, 0); }
		public ComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitComparison(this);
		}
	}

	public final ComparisonContext comparison() throws RecognitionException {
		ComparisonContext _localctx = new ComparisonContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_comparison);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156); value();
			setState(157); match(COMPARATOR);
			setState(158); value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public TerminalNode TERM() { return getToken(foplGramParser.TERM, 0); }
		public StringContext string(int i) {
			return getRuleContext(StringContext.class,i);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> WORD() { return getTokens(foplGramParser.WORD); }
		public List<StringContext> string() {
			return getRuleContexts(StringContext.class);
		}
		public TerminalNode WORD(int i) {
			return getToken(foplGramParser.WORD, i);
		}
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitOutput(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_output);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160); match(T__20);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(161); string();
				setState(166);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(162); match(T__2);
					setState(163); value();
					setState(164); match(WORD);
					}
				}

				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173); match(T__4);
			setState(174); match(TERM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public TerminalNode TERM() { return getToken(foplGramParser.TERM, 0); }
		public TerminalNode WORD() { return getToken(foplGramParser.WORD, 0); }
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176); match(T__15);
			setState(177); match(WORD);
			setState(178); match(T__4);
			setState(179); match(TERM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DoWhileContext extends ParserRuleContext {
		public TerminalNode BLOCKOPEN() { return getToken(foplGramParser.BLOCKOPEN, 0); }
		public TerminalNode BLOCKCLOSE() { return getToken(foplGramParser.BLOCKCLOSE, 0); }
		public List<ComparisonContext> comparison() {
			return getRuleContexts(ComparisonContext.class);
		}
		public TerminalNode TERM() { return getToken(foplGramParser.TERM, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public ComparisonContext comparison(int i) {
			return getRuleContext(ComparisonContext.class,i);
		}
		public DoWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doWhile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).enterDoWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof foplGramListener ) ((foplGramListener)listener).exitDoWhile(this);
		}
	}
